Bug 544254 [12][codegen] Switch Expressions - Inconsistent stackmap frames at branch target error and Bug 544253 - [12][codegen] Switch Expressions - Multiple codegen errors
Change-Id: I7211d9737c7e26365a7250c68e725a9cce15e072